--- a/styles.css
+++ b/styles.css
@@ -20,12 +20,14 @@
     border-radius: 5px;
     font-size: 1.8rem;
     letter-spacing: 2px;
+    
   }
 
   
   h1 {
-    font-size: 1.5rem;
-    text-align: left;
+    font-size: 2rem;
+    text-align: center;
+    
   }
     
   
@@ -41,7 +43,7 @@
   
   }
   .responsive-img {
-    width: 1000px; 
+    width: 600px; 
     height: auto;
     transition: transform 0.3s ease;
     margin: 10px;
@@ -75,7 +77,7 @@
   
   .card {
     background-color: #fff;
-    width: 900px;
+    width: 600px;
     margin: 10px;
     padding: 15px;
     border: 4px solid #222; 
