--- a/styles.css
+++ b/styles.css
@@ -20,13 +20,74 @@
     border-radius: 5px;
     font-size: 1.8rem;
     letter-spacing: 2px;
+    align-items: left;
     
   }
+ 
+
+nav,
+.nav-links {
+  display: flex;
+}
+
+nav {
+  justify-content: space-around;
+  align-items: center;
+  height: 10vh;
+}
+
+.nav-links {
+  gap: 2rem;
+  list-style: none;
+  font-size: 1.5rem;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+  text-decoration-color: white;
+}
+
+a:hover {
+  color: #16404D;
+  text-decoration: underline;
+  text-underline-offset: 1rem;
+}
+
+.menu-links {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background-color: white;
+  width: fit-content;
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.3 ease-in-out;
+}
+
+.menu-links a {
+  display: block;
+  padding: 10px;
+  text-align: center;
+  font-size: 1.5rem;
+  color: black;
+  text-decoration: none;
+  transition: all 0.3 ease-in-out;
+}
+
+.menu-links li {
+  list-style: none;
+}
+
+.menu-links.open {
+  max-height: 300px;
+}
+
 
   
   h1 {
     font-size: 4rem;
-    text-align: center;
+    text-align: left;
    
     
   }
@@ -52,9 +113,9 @@
   
   }
   .responsive-img {
-    width: 50px; 
+    width: 500px; 
     height: auto;
-    align-items: center;
+    float: left;
     
   }
   
