--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,8 @@ nav {
 .nav-links {
   gap: 2rem;
   list-style: none;
-  font-size: 1.5rem;
+  font-size: 2rem;
+  text-transform: uppercase;
 }
 
 a {
@@ -69,7 +70,7 @@ a:hover {
   display: block;
   padding: 10px;
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 2rem;
   color: black;
   text-decoration: none;
   transition: all 0.3 ease-in-out;
@@ -93,23 +94,25 @@ a:hover {
   }
 
   h3 {
-    font-size: 2rem;
+    font-size: 3rem;
     text-align: center;
     color: #000000;
+    font-weight: 100;
    
     
   }
     
   
   p {
-    font-size: 1.2rem;
-    margin-top: 10px;
+    font-size: 1.7rem;
+    margin-top: 5px;
     font-family:  'Kameron';
     letter-spacing: .5px;
     background-color: #16404D;
     padding: 30px;
     border-radius: 50px;
     color: #fff;
+    font-weight: 100;
   
   }
   .responsive-img {
@@ -127,7 +130,7 @@ a:hover {
     padding: 10px;
     width: 50%;
     font-size: .7rem;
-    border: 4px solid #222; /* Pixel-style border */
+    border: 4px solid #222; 
     border-radius: 8px;
     background-color: #fff;
     font-family:  'Kameron';
@@ -145,10 +148,10 @@ a:hover {
   .card {
     background-color: #fff;
     width: 600px;
-    margin: 10px;
+    margin: 5px;
     padding: 15px;
     border: 4px solid #222; 
-    border-radius: 10px;
+    border-radius: 5px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     transition: transform 0.2s ease-in-out;
     font-family:  'Kameron';
@@ -170,7 +173,7 @@ a:hover {
     font-size: 1rem;
     margin-top: 10px;
     font-family:  'Kameron';
-    text-transform: uppercase;
+    text-transform: lowercase;
     letter-spacing: 2px;
   }
   
