--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,12 @@ a:hover {
     font-weight: 100;
   
   }
+  .responsive-img {
+    width: 500px; 
+    height: auto;
+    float: left;
+    
+  }
   
   #searchSection {
     margin-top: 30px;
